[gd_scene load_steps=9 format=3 uid="uid://y75inopfqogp"]

[ext_resource type="Shader" path="res://pause_menu.gdshader" id="1_hvtma"]
[ext_resource type="Script" path="res://scripts/Common/gameover.gd" id="1_q2nf4"]
[ext_resource type="FontFile" uid="uid://c55u258cf0q6c" path="res://Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf" id="2_48qxm"]
[ext_resource type="Texture2D" uid="uid://d2yoejno4u7sk" path="res://assets/art/windowpopup.png" id="3_1k7jl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ked77"]
shader = ExtResource("1_hvtma")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_bsylo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_lujbo"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.811]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tngsp"]
_data = {
"RESET": SubResource("Animation_bsylo"),
"blur": SubResource("Animation_lujbo")
}

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q2nf4")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ked77")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 3.0
offset_right = 5.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.497
anchor_top = 0.485
anchor_right = 0.5
anchor_bottom = 0.485
offset_left = -274.24
offset_top = -326.8
offset_right = 319.0
offset_bottom = 336.2

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer"]
position = Vector2(292, 317)
scale = Vector2(0.694444, 0.679695)
texture = ExtResource("3_1k7jl")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 85

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48qxm")
theme_override_font_sizes/font_size = 51
text = " PERDISTE :("
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 90

[node name="Reiniciar" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48qxm")
theme_override_font_sizes/font_size = 41
text = "Reiniciar"

[node name="Salir" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48qxm")
theme_override_font_sizes/font_size = 41
text = "Salir"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tngsp")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Salir" to="." method="_on_salir_pressed"]
